# c-roguelike-framework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  c_roguelike_framework.c  c_roguelike_framework.h  main.c  tiny_ttf.h
game/: CMakeLists.txt  game.c  game.h
source_assets/: characters.xcf  icons_01.xcf  nine_slice.xcf  nine_slice_test.xcf  tiles.xcf
